# bonsai

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: audit.yml  ci.yml  zizmor.yml
assets/icon/: bonsai.icns
src/: bonsai.rs  main.rs  node.rs  wallet.rs
src/about/: view.rs
src/common/: logger.rs  mod.rs  util.rs
src/common/interface/: button.rs  color.rs  colors.rs  constants.rs  container.rs  font.rs  mod.rs  shadow.rs
src/common/interface/container/: common.rs  content.rs  header.rs  mod.rs  sidebar.rs  window.rs
src/node/: control.rs  error.rs  geoip.rs  log_capture.rs  logger.rs  message.rs  mod.rs  node.rs  statistics.rs  stats_fetcher.rs  style.rs
src/node/blocks/: view.rs
src/node/interface/: common.rs  mod.rs
src/node/interface/blocks/: view.rs
src/node/interface/container/: common.rs  overview.rs  p2p.rs
src/node/interface/network/: view.rs
src/node/interface/overview/: container.rs  mod.rs  style.rs  view.rs
src/node/interface/p2p/: style.rs  view.rs
src/node/interface/settings/: mod.rs
src/node/interface/statistics/: style.rs  view.rs
src/node/interface/utreexo/: mod.rs  view.rs
src/node/network/: style.rs  view.rs
src/node/statistics/: style.rs  view.rs
src/node/utreexo/: style.rs  view.rs
src/settings/: bonsai_settings.rs  mod.rs  view.rs
src/wallet/: mod.rs  placeholder.rs  wallet.rs
src/wallet/ark/: placeholder.rs
src/wallet/bdk/: placeholder.rs
src/wallet/phoenixd/: placeholder.rs
