[package]
name = "bonsai_wallet"
version = "0.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com>"]
description = "Bonsai [盆栽] is a desktop Bitcoin wallet powered by bdk_floresta. Coming soon™."
repository = "https://github.com/luisschwab/bonsai"
readme = "README.md"
license = "MIT"
keywords = ["bitcoin", "wallet", "bdk", "utreexo", "floresta"]

[[bin]]
name = "bonsai"
path = "src/bonsai.rs"

[package.metadata.bundle]
name = "bonsai"
icon = ["assets/icon/bonsai.icns"]

[dependencies]
bdk_floresta = { path = "../bdk-floresta" }
bdk_wallet = "2.3.0"
iced = { version = "0.13.1", features = ["tokio", "image"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
